# zflows

./: .gitignore  LICENSE  README.ipynb  README.md  README_SRC.md  pyproject.toml
docs/: render.sh
docs/tex/: forward_kl.tex  forward_loss.tex  pushforward.tex  reverse_kl.tex  reverse_loss.tex
tests/: 2D_RealNVP_latent_interpolation.md  2D_RealNVP_latent_interpolation.py  2D_forward_KL.ipynb  2D_forward_KL.md  2D_forward_KL.py  2D_reverse_KL.ipynb  2D_reverse_KL.md  2D_reverse_KL.py  2D_two_moon_CNF.md  2D_two_moon_CNF.py  3D_periodic.ipynb  3D_periodic.md  3D_periodic.py  4D_Boltzmann_generator.ipynb  4D_Boltzmann_generator.md  4D_Boltzmann_generator.py  _CNF_interface.py  _RealNVP_interface.py  _call_and_ladj_grad.py  _enable_eval.py  _linear_combination.py  test_2D_reverse_KL.ipynb  test_2D_reverse_KL.py
zflows/: __init__.py  flow.py  loss.py  potential.py  utilities.py
