[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zflows"
version = "0.2.0"
description = "A convenient wrapper of zuko for implementing normalizing flow."
authors = [{ name = "Xuda" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "zuko>=1.6.0",
    "torch>=2.10.0",
]

[tool.setuptools.packages.find]
include = ["zflows*"]
